Package_Tools/include-C/Ubuntu_26.04/glib-2.0/glib/in_arbeit/h/gquark.h

/* GLIB - Library of useful routines for C programming
 * Copyright (C) 1995-1997  Peter Mattis, Spencer Kimball and Josh MacDonald
 *
 * SPDX-License-Identifier: LGPL-2.1-or-later
 *
 * This library is free software; you can redistribute it and/or
 * modify it under the terms of the GNU Lesser General Public
 * License as published by the Free Software Foundation; either
 * version 2.1 of the License, or (at your option) any later version.
 *
 * This library is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.	 See the GNU
 * Lesser General Public License for more details.
 *
 * You should have received a copy of the GNU Lesser General Public
 * License along with this library; if not, see <http://www.gnu.org/licenses/>.
 */

/*
 * Modified by the GLib Team and others 1997-2000.  See the AUTHORS
 * file for a list of people on the GLib Team.  See the ChangeLog
 * files for a list of changes.  These files are distributed with
 * GLib at ftp://ftp.gtk.org/pub/gtk/.
 */

#ifndef __G_QUARK_H__
#define __G_QUARK_H__

#if !defined (__GLIB_H_INSIDE__) && !defined (GLIB_COMPILATION)
#error "Only <glib.h> can be included directly."
#endif

#include <glib/gtypes.h>



typedef guint32 GQuark;

/* Quarks (string<->id association)
 */
extern
GQuark                g_quark_try_string         (const gchar *string);
extern
GQuark                g_quark_from_static_string (const gchar *string);
extern
GQuark                g_quark_from_string        (const gchar *string);
extern
const gchar *         g_quark_to_string          (GQuark       quark) ;


extern
const gchar *         g_intern_string            (const gchar *string);
extern
const gchar *         g_intern_static_string     (const gchar *string);



#endif /* __G_QUARK_H__ */